assets/style.css
#content{
    padding-top: 0;
    text-align: center;
}

#content .avatar{
    width: 250px;
    height: 250px;
    margin-top: -125px;
    border-radius: 50%;
}

#content .name{
    font-size: 32px;
}

#content .donate-button{
    display: flex;
    justify-content: center;
}

#content .donate-button > a{
    background: linear-gradient(120deg, #155799, #159957);
    color: white;
    padding: 20px 40px;
    font-size: 28px;
    border-radius: 40px;
    margin-top: 40px;
    text-decoration: none;
    transition: 0.5s;
}

#content .donate-button > a:hover{
    filter: brightness(120%);
}

.project-name{
    position: relative;
}

.project-name > img{
    width: 250px;
    margin-bottom: 100px;
}

